--- a/Fallback/fallback.html
+++ b/Fallback/fallback.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="fallback.css">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <title>Spotify Fallback Page</title>
     </head>
     <body>
