--- a/Fallback/index.html
+++ b/Fallback/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="fallback.css">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" href="favicon.ico">
         <title>Spotify Fallback Page</title>
     </head>
     <body>
